# green-melon

./: 404.html  Makefile  README.md  index.html  labelmap.yml  map.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
about/: index.html
backgrounds/: crop_and_weed_empty.txt  crop_and_weed_empty_images.txt  sorghum_empty.txt  sorghum_weed_empty_images.txt  weed25_empty.txt
dataset/: index.html
docs/: CNAME  about.md  dataset.md  index.md  zea_mays.md
green_melon/: __init__.py  annot.py  convert_annot.py  plot.py  utils.py
notebooks/: annotation.ipynb  sorghum_weed_convert.ipynb
search/: search_index.json
src/: convert_annot.py  utils.py
tests/: test_annot.py
uploads/: upload.sh  upload_weed25.py
zea_mays/: index.html
