[project]
name = "green-melon"
version = "0.1.0"
description = "deliver small, think big"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
    "roboflow>=1.1.54",
    "ultralytics>=8.3.78",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.8",
]

lint = [
    "mypy>=1.15.0",
    "ruff>=0.9.7",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # incompatible with D211(docstrings)
    "D212", # incompatible with D123(docstrings)
    "COM812", # recommended because of ruff format
    "ISC001", # recommended because of ruff format
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = ["S101"]


[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = "green_melon.annot"
disable_error_code = [
    "union-attr",
    "arg-type"
]

[[tool.mypy.overrides]]
module = "green_melon.plot"
disable_error_code = [
    "union-attr",
    "arg-type"
]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=green_melon --cov-report html --cov-fail-under=30"
